--- a/.github/workflows/admin-actions.yaml
+++ b/.github/workflows/admin-actions.yaml
@@ -20,9 +20,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: npm i
-      - run: npm run build
-      - run: npm run test
+      # - run: npm i
+      # - run: npm run build
+      # - run: npm run test
 
       - name: rsync deployments
         uses: burnett01/rsync-deployments@5.1
@@ -33,3 +33,20 @@ jobs:
           remote_host: 15.206.49.180
           remote_user: ubuntu
           remote_key: "${{ secrets.SSH_PRIVATE_KEY }}"
+      
+      - name: Build & Deploy
+        env:
+            PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+            HOSTNAME: ${{secrets.SSH_HOST}}
+            USER_NAME: ${{secrets.USER_NAME}}
+      
+        run: |
+          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
+
+              # Now we have got the access of EC2 and we will start the deploy .
+              cd /var/www/html &&
+              sudo npm i &&
+              sudo npm run build &&
+              sudo npm start
+              '
