--- a/.github/workflows/admin-actions.yaml
+++ b/.github/workflows/admin-actions.yaml
@@ -40,7 +40,5 @@ jobs:
 
               # Now we have got the access of EC2 and we will start the deploy .
               cd /var/www/html &&
-              npm i &&
-              npm run build &&
-              npm start
+              yarn
               '
