--- a/.github/workflows/admin-actions.yaml
+++ b/.github/workflows/admin-actions.yaml
@@ -38,6 +38,12 @@ jobs:
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
 
+              # Now we have got the access of EC2 and we will start the deploy .
+              export NVM_DIR=~/.nvm
+              source ~/.nvm/nvm.sh
+
               cd /var/www/html &&
-              mkdir ./mcbc
+              sudo npm i &&
+              sudo npm run build &&
+              sudo npm start
               '
