--- a/.github/workflows/admin-actions.yaml
+++ b/.github/workflows/admin-actions.yaml
@@ -11,12 +11,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [14.x]
+
     steps:
       - uses: actions/checkout@v2
 
-      - name: Node Js
-        uses: actions/setup-node@v1
-        
       - run: npm i
       - run: npm run build
       - run: npm run test
